--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="icon" href="img/boolicon.ico">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +12,42 @@
     <title>Boolando</title>
 </head>
 <body>
-    
+    <header> <!--header fixed-->
+        <img src="img/Logo.png" alt="Logo Boolando">
+        <H1>Boolando</H1>
+    </header>
+
+    <main class="container">
+        <ul>
+            <li>
+                <article>
+                    <img src="img/1.webp" alt="item1">
+                    <div class="infos">
+                        <div class="discount inline-block">- 50%</div>
+                        <div class="type-dress inline-block">Sostenibilità</div>
+                    </div>
+                    <div class="preferiti">&hearts;</div>
+                </article>
+            </li>
+            <li class="center">
+                <article>
+                    <img src="img/2.webp" alt="item1">
+                    <div class="infos">
+                        <div class="discount inline-block">- 30%</div>
+                    </div>
+                    <div class="preferiti">&hearts;</div>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <img src="img/3.webp" alt="item1">
+                    <div class="infos">
+                        <div class="discount inline-block">- 30%</div>
+                    </div>
+                    <div class="preferiti">&hearts;</div>
+                </article>
+            </li>
+        </ul>
+    </main>
 </body>
 </html>
