--- a/index.html
+++ b/index.html
@@ -18,35 +18,110 @@
     </header>
 
     <main class="container">
-        <ul>
+        <ul> <!--lista di elementi 3 per riga-->
             <li>
-                <article>
-                    <img src="img/1.webp" alt="item1">
+                <article> <!--foto articolo 1 con info-->
+                    <img id="img1" src="img/1.webp" alt="item1">
                     <div class="infos">
                         <div class="discount inline-block">- 50%</div>
                         <div class="type-dress inline-block">Sostenibilità</div>
                     </div>
                     <div class="preferiti">&hearts;</div>
                 </article>
+                <div class="definition">
+                    <div class="brand">Levi's</div>
+                    <div class="prodotto">Relaxed fit tee unisex</div>
+                    <div class="price">
+                        <span>14,99 &euro; </span>
+                        <span>29,99 &euro;</span>
+                    </div>
+                </div>
             </li>
             <li class="center">
-                <article>
-                    <img src="img/2.webp" alt="item1">
+                <article> <!--foto articolo 2 con info-->
+                    <img id="img2" src="img/2.webp" alt="item2">
                     <div class="infos">
                         <div class="discount inline-block">- 30%</div>
                     </div>
                     <div class="preferiti">&hearts;</div>
                 </article>
+                <div class="definition">
+                    <div class="brand">Guess</div>
+                    <div class="prodotto">Roses tee</div>
+                    <div class="price">
+                        <span>20,99 &euro; </span>
+                        <span>29,99 &euro;</span>
+                    </div>
+                </div>
             </li>
             <li>
-                <article>
-                    <img src="img/3.webp" alt="item1">
+                <article> <!--foto articolo 3 con info-->
+                    <img id="img3" src="img/3.webp" alt="item3">
                     <div class="infos">
                         <div class="discount inline-block">- 30%</div>
                     </div>
                     <div class="preferiti">&hearts;</div>
                 </article>
+                <div class="definition">
+                    <div class="brand">Come Zucchero Filato</div>
+                    <div class="prodotto">Voglia di colori pastello</div>
+                    <div class="price">
+                        <span>129,99 &euro; </span>
+                        <span></span>
+                    </div>
+                </div>
             </li>
+            <li>
+                <article> <!--foto articolo 4 con info-->
+                    <img id="img4" src="img/4.webp" alt="item4">
+                    <div class="infos">
+                        <div class="discount inline-block">- 50%</div>
+                        <div class="type-dress inline-block">Sostenibilità</div>
+                    </div>
+                    <div class="preferiti">&hearts;</div>
+                </article>
+                <div class="definition">
+                    <div class="brand">Levi's</div>
+                    <div class="prodotto">Tee unisex</div>
+                    <div class="price">
+                        <span>14,99 &euro; </span>
+                        <span>29,99 &euro;</span>
+                    </div>
+                </div>
+            </li>
+            <li class="center">
+                <article> <!--foto articolo 5 con info-->
+                    <img id="img5" src="img/5.webp" alt="item5">
+                    <div class="infos"></div>
+                    <div class="preferiti">&hearts;</div>
+                </article>
+                <div class="definition"> 
+                    <div class="brand">Maya Deluxe</div>
+                    <div class="prodotto">Stripe Bodice</div>
+                    <div class="price">
+                        <span>99,99 &euro; </span>
+                        <span></span>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <article> <!--foto articolo 6 con info-->
+                    <img id="img6" src="img/6.webp" alt="item6">
+                    <div class="infos">
+                        <div class="type-dress inline-block">Sostenibilità</div>
+                    </div>
+                    <div class="preferiti">&hearts;</div>
+                </article>
+                <div class="definition">
+                    <div class="brand">Espirit</div>
+                    <div class="prodotto">Maglione - Black</div>
+                    <div class="price">
+                        <span>29,99 &euro; </span>
+                        <span></span>
+                    </div>
+                </div>
+            </li>
+            
         </ul>
     </main>
 </body>
