--- a/bonus/index.html
+++ b/bonus/index.html
@@ -17,7 +17,7 @@
         <H1>Boolando</H1>
     </header>
 
-    <main class="container">
+    <main class="container clearfix">
      <!--lista di elementi 3 per riga-->
         <div class="card">
             <div class="article" id="img1"> <!--foto articolo 1 con info-->
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>          
-        <div class="card center">
+        <div class="card">
             <div class="article" id="img2"> <!--foto articolo 2 con info-->
                 <div class="infos">
                     <div class="discount inline-block">- 30%</div>
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div> 
-        <div class="card center">
+        <div class="card">
             <div class="article" id="img5"> <!--foto articolo 1 con info-->
                 <div class="infos"></div>
                     <div class="preferiti">&hearts;</div>
